tests/assignment/faulty_constant.sy
start :: fn do
    a :: 1
    a = 2
end

// error: $Assignability
